--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- article -->     
 <article>
 	<h1>Überschrift</h1>
-	<p>Lorem ipsum dolor sit amet, consetetur elitr sadipscing.</p>	
+	<p class="test">Lorem ipsum dolor sit amet, consetetur elitr sadipscing.</p>	
 </article>
           
 <!-- aside -->
