looots of stuff

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<ul class="navbar">
 				<li><a href="autismus/autismus.html">Autismus (er)leben</a></li>
 				<li><a href="queer/queer.html">Queere Kurzgeschichten</a></li>
-				<li><a href="#">Kontakt</a></li>
+				<li><a href="fanfiction/fanfiction.html">Fanfiction</a></li>
 				</ul>	
 			</nav>
 		</div>
