--- a/fanfiction/fanfiction.html
+++ b/fanfiction/fanfiction.html
@@ -12,61 +12,50 @@
     <link rel="stylesheet" href="../styles/bookshelf.css">
 </head>
 
-<body class="body queer">
+<body class="body fanfiction">
 <div>
 <!-- header -->
-	<header class="header queer-header">
-		<h2 class="header-text">Queere Kurzgeschichten & Co</h2>
+	<header class="header fanfiction-header">
+		<h2 class="header-text">Fanfiction</h2>
 	</header>
    
 <!-- navigation -->
 	<nav>
 		<ul class="navbar">
 		<li><a href="../index.html">Startseite</a></li>
+		<li><a href="../queer/queer.html">Queere Kurzgeschichten</a></li>
 		<li><a href="../autismus/autismus.html">Autismus (er)leben</a></li>
-		<li><a href="#">Kontakt</a></li>
 		</ul>	
 	</nav>
 </div>
 
 <div class="content-container">
-    <h3>Seitentitel</h3>
+    <h3>Harry Potter - Universum</h3>
     <div class="bookshelf">
-        <a href="regenbogen-os/regenbogen-os-overview.html" class="book">
-            <img src="../objects/covers/Regenbogen-OS.jpg" class="cover"/>
-            <p>Regenbogen-Oneshots</p>
-        </a>
-
-        <a href="" class="book">
-            <img src="../objects/covers/OutOfTheCloset.jpg" class="cover"/>
-            <p>Out of the closet</p>
-        </a>
-
-        <a href="" class="book">
-            <img src="../objects/covers/DasAndereUfer.jpg" class="cover"/>
-            <p>Das "andere Ufer"</p>
+        <a href="mobbing-auch-in-hogwarts/mobbing-auch-in-hogwarts-overview.html" class="book">
+            <img src="../objects/covers/MobbingAuchInHogwarts.jpg" class="cover"/>
+            <p>Mobbing - auch in Hogwarts</p>
         </a>
 
         <a href="" class="book">
             <img src="../objects/covers/cover.png" class="cover"/>
-            <p>Titel</p>
+            <p>Liebe ich ihn?</p>
         </a>
 
         <a href="" class="book">
             <img src="../objects/covers/cover.png" class="cover"/>
-            <p>Titel</p>
+            <p>Der Herbst ist da</p>
         </a>
 
         <a href="" class="book">
             <img src="../objects/covers/cover.png" class="cover"/>
-            <p>Titel</p>
+            <p>Remus + Tonks</p>
         </a>
-
     </div>
 </div>
      
 <!-- footer -->
-<footer class="footer queer-footer">
+<footer class="footer fanfiction-footer">
 	<p class="footer-text">Fußzeile</p>
 </footer>
 
