added first chapters of Mobbing in Hogwarts

--- a/fanfiction/mobbing-auch-in-hogwarts/mobbing-auch-in-hogwarts-overview.html
+++ b/fanfiction/mobbing-auch-in-hogwarts/mobbing-auch-in-hogwarts-overview.html
@@ -38,15 +38,15 @@
             <div class="inhaltsverzeichnis">
                 <h4>Inhalt:</h4>
                 <ol>
-                    <li><a href="1_184Tage.html"></a></li>
-                    <li><a href="2_TreffenMitHindernissen.html"></a></li>
-                    <li><a href="3_DerKirschbaum.html"></a></li>
-                    <li><a href="4_Perfect.html"></a></li>
-                    <li><a href="5_AceAtSummer.html"></a></li>
-                    <li><a href="6_Traeume.html"></a></li>
-                    <li><a href="7_Herbstgefuehle.html"></a></li>
-                    <li><a href="8_Laterne_Laterne.html"></a></li>
-                    <li><a href="9_Tagtraeume.html"></a></li>
+                    <li><a href="1_Allein.html">Allein</a></li>
+                    <li><a href="2_NeueGefuehle.html">Neue Gefühle</a></li>
+                    <li><a href="3_BitteSprichMitMir.html">Bitte, sprich mit mir!</a></li>
+                    <li><a href="4_OkIchTus.html">Ok, ich tus</a></li>
+                    <li><a href="5_AendertDasWas.html">Ändert das was?</a></li>
+                    <li><a href="6_TatenWerdenFolgen.html">Taten werden folgen</a></li>
+                    <li><a href="7_Panik.html">Panik</a></li>
+                    <li><a href="8_Gespraech1 copy.html">Gespräch (Teil 1)</a></li>
+                    <li><a href="9_Gespraech2.html">Gespräch (Teil 2)</a></li>
                     <li><a href="10_EinRichtigesMaedchen.html"></a></li>
                     <li><a href="11_Caught.html"></a></li>
                     <li><a href="12_IstDaMehr.html"></a></li>
