first working edition

--- a/autismus/autismus.html
+++ b/autismus/autismus.html
@@ -23,14 +23,13 @@
 		<ul class="navbar">
 		<li><a href="../index.html">Startseite</a></li>
 		<li><a href="../queer/queer.html">Queere Kurzgeschichten</a></li>
-		<li><a href="#">Kontakt</a></li>
+		<li><a href="../fanfiction/fanfiction.html">Fanfiction</a></li>
 		</ul>	
 	</nav>
 </div>
 
 <div class="content-container">
-    <p>Titel</p>
-    <p>Content</p>
+    <h1>Seite im Aufbau... bitte komm wann anders wieder!</h1>
 </div>
      
 <!-- footer -->
