--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 		</div>
 
 		<div class="content-container">
-			<p>Titel</p>
-			<p>Content</p>
+			<h1>Seite im Aufbau... bitte komm wann anders wieder!</h1>
 		</div>
 		
 	<!-- footer -->
