--- a/queer/queer.html
+++ b/queer/queer.html
@@ -24,7 +24,7 @@
 		<ul class="navbar">
 		<li><a href="../index.html">Startseite</a></li>
 		<li><a href="../autismus/autismus.html">Autismus (er)leben</a></li>
-		<li><a href="#">Kontakt</a></li>
+		<li><a href="../fanfiction/fanfiction.html">Fanfiction</a></li>
 		</ul>	
 	</nav>
 </div>
@@ -37,6 +37,7 @@
             <p>Regenbogen-Oneshots</p>
         </a>
 
+        <!--
         <a href="" class="book">
             <img src="../objects/covers/OutOfTheCloset.jpg" class="cover"/>
             <p>Out of the closet</p>
@@ -60,7 +61,7 @@
         <a href="" class="book">
             <img src="../objects/covers/cover.png" class="cover"/>
             <p>Titel</p>
-        </a>
+        </a>-->
 
     </div>
 </div>
