--- a/queer/regenbogen-os/regenbogen-os-overview.html
+++ b/queer/regenbogen-os/regenbogen-os-overview.html
@@ -40,7 +40,7 @@
                 <ol>
                     <li><a href="1_184Tage.html">Januar - 184 Tage</a></li>
                     <li><a href="2_TreffenMitHindernissen.html">Februar - Treffen mit Hindernissen</a></li>
-                    <li><a href="3_DerKirschbaum.html">April - Der Kirschbaum</a></li>
+                    <!-- <li><a href="3_DerKirschbaum.html">April - Der Kirschbaum</a></li>
                     <li><a href="4_Perfect.html">Juni - Perfect</a></li>
                     <li><a href="5_AceAtSummer.html">August - Ace at Summer</a></li>
                     <li><a href="6_Traeume.html">September - Träume</a></li>
@@ -49,7 +49,7 @@
                     <li><a href="9_Tagtraeume.html">Tagträume</a></li>
                     <li><a href="10_EinRichtigesMaedchen.html">Ein richtiges Mädchen</a></li>
                     <li><a href="11_Caught.html">Cauht</a></li>
-                    <li><a href="12_IstDaMehr.html">Ist da mehr?</a></li>
+                    <li><a href="12_IstDaMehr.html">Ist da mehr?</a></li>-->
                 </ol>
             </div>
         </div>
