added Title and description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width = device-width, initial-scale = 1.0" />  
-		<title>Beispielseite</title>
-		<meta name="description" content="Beschreibungstext">
+		<title>Kurzgeschichtensammlung</title>
+		<meta name="description" content="Hier finden sich diverse Kurzgeschichten zu queeren Themen und Fanfictions zum Harry-Potter-Universum">
 		<link rel="shortcut icon" href="favicon.ico" />
 		<link rel="stylesheet" href="styles/style.css">
 		<link rel="stylesheet" href="styles/header_footer.css">
