added lots of chapters to regenbogen-os and some style

--- a/queer/summer/summer-overview.html
+++ b/queer/summer/summer-overview.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width = device-width, initial-scale = 1.0" />  
-        <title>Regenbogen-Oneshots</title>
+        <title>Summer | LGBT* Kurzgeschichte</title>
         <meta name="description" content="To Do To Do To Do">
         <link rel="stylesheet" href="../../styles/style.css">
         <link rel="stylesheet" href="../../styles/header_footer.css">
@@ -19,7 +19,7 @@
         <div class="content-container">
             <div class="bookheadline">
                 <a class="icon-back" href="../queer.html" ><img class="icon-back" src="../../objects/arrow-left.svg"/></a>
-                <h3>Regenbogen-Oneshots</h3>
+                <h3>Summer - LGBT* Kurzgeschichte</h3>
             </div>
             
             <div class="buchsteckbrief">
@@ -30,23 +30,12 @@
                     <div class="inhaltsverzeichnis">
                         <h4>Inhalt:</h4>
                         <ol>
-                            <li><a href="1_184Tage.html">Januar - 184 Tage</a></li>
-                            <li><a href="2_TreffenMitHindernissen.html">Februar - Treffen mit Hindernissen</a></li>
-                            <li><a href="3_DerKirschbaum.html">April - Der Kirschbaum</a></li>
-                            <li><a href="4_Perfect.html">Juni - Perfect</a></li>
-                            <li><a href="5_AceAtSummer.html">August - Ace at Summer</a></li>
-                            <li><a href="6_Traeume.html">September - Träume</a></li>
-                            <li><a href="7_Herbstgefuehle.html">Oktober - Herbstgefühle</a></li>
-                            <li><a href="8_Laterne_Laterne.html">November - Laterne, Laterne</a></li>
-                            <li><a href="9_Tagtraeume.html">Tagträume</a></li>
-                            <li><a href="10_EinRichtigesMaedchen.html">Ein richtiges Mädchen</a></li>
-                            <li><a href="11_Caught.html">Cauht</a></li>
-                            <li><a href="12_IstDaMehr.html">Ist da mehr?</a></li>
+                            <li><a href="">Kapitel</a></li>
                         </ol>
                     </div>
                 </div>
 
-                <img class="steckbrief-cover" src="../../objects/covers/Regenbogen-OS.jpg" />
+                <img class="steckbrief-cover" src="../../objects/covers/cover.png" />
             </div>
         </div>
             
