added chapters in autism-section

--- a/autismus/autismus.html
+++ b/autismus/autismus.html
@@ -1,42 +1,85 @@
 <!doctype html>
 <html lang="de">
 
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width = device-width, initial-scale = 1.0" />  
-	<title>Beispielseite</title>
-	<meta name="description" content="Beschreibungstext">
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/header_footer.css">
-</head>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width = device-width, initial-scale = 1.0" />  
+		<title>Autismus (er)leben</title>
+		<meta name="description" content="To Do ToDo To Do">
+		<link rel="stylesheet" href="../styles/style.css">
+		<link rel="stylesheet" href="../styles/header_footer.css">
+		<link rel="stylesheet" href="../styles/bookshelf.css">
+	</head>
 
-<body class="body">
-<div>
-<!-- header -->
-	<header class="header autism-header">
-		<h2 class="header-text">Autismus (er)leben</h2>
-	</header>
-   
-<!-- navigation -->
-	<nav>
-		<ul class="navbar">
-		<li><a href="../index.html">Startseite</a></li>
-		<li><a href="../queer/queer.html">Queere Kurzgeschichten</a></li>
-		<li><a href="../fanfiction/fanfiction.html">Fanfiction</a></li>
-		</ul>	
-	</nav>
-</div>
+	<body class="body autism">
+		<div>
+		<!-- header -->
+			<header class="header autism-header">
+				<h2 class="header-text">Autismus (er)leben</h2>
+				<div  class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+			</header>
+		
+		<!-- navigation -->
+			<nav>
+				<ul class="navbar">
+				<li><a href="../index.html">Startseite</a></li>
+				<li><a href="../queer/queer.html">Queere Kurzgeschichten</a></li>
+				<li><a href="../fanfiction/fanfiction.html">Fanfiction</a></li>
+				</ul>	
+			</nav>
+		</div>
 
-<div class="content-container">
-    <h1>Seite im Aufbau... bitte komm wann anders wieder!</h1>
-</div>
-     
-<!-- footer -->
-<footer class="footer autism-footer">
-	<p class="footer-text">Fußzeile</p>
-</footer>
-
-
-</body>
+		<div class="content-container">
+			<div class="bookshelf" style="margin-top: 1rem;">
+                <a href="beingAutistic/beingAutistic-overwiew.html" class="book">
+                    <img src="../objects/covers/BeingAutistic.jpg" class="cover" alt="being autistic von Lily Evans-Granger"/>
+                    <p class="bookinfo">being autistic</p>
+                </a>
+			</div>
+		</div>
+		
+		<!-- footer -->
+		<footer class="footer autism-footer">
+			<p class="footer-text">Fußzeile</p>
+			<div  class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div  class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+				<div class="star"></div>
+		</footer>
+	</body>
 </html>
