lots of new stuff for fanfiction

--- a/fanfiction/mobbing-auch-in-hogwarts/mobbing-auch-in-hogwarts-overview.html
+++ b/fanfiction/mobbing-auch-in-hogwarts/mobbing-auch-in-hogwarts-overview.html
@@ -38,18 +38,15 @@
             <div class="inhaltsverzeichnis">
                 <h4>Inhalt:</h4>
                 <ol>
-                    <li><a href="1_Allein.html">Allein</a></li>
-                    <li><a href="2_NeueGefuehle.html">Neue Gefühle</a></li>
-                    <li><a href="3_BitteSprichMitMir.html">Bitte, sprich mit mir!</a></li>
-                    <li><a href="4_OkIchTus.html">Ok, ich tus</a></li>
-                    <li><a href="5_AendertDasWas.html">Ändert das was?</a></li>
-                    <li><a href="6_TatenWerdenFolgen.html">Taten werden folgen</a></li>
-                    <li><a href="7_Panik.html">Panik</a></li>
-                    <li><a href="8_Gespraech1 copy.html">Gespräch (Teil 1)</a></li>
-                    <li><a href="9_Gespraech2.html">Gespräch (Teil 2)</a></li>
-                    <li><a href="10_EinRichtigesMaedchen.html"></a></li>
-                    <li><a href="11_Caught.html"></a></li>
-                    <li><a href="12_IstDaMehr.html"></a></li>
+                    <li><a href="1-2.html">Allein / Neue Gefühle</a></li>
+                    <li><a href="3-4.html">Bitte, sprich mit mir! / Ok, ich tus</a></li>
+                    <li><a href="5-6.html">Ändert das was? / Taten werden folgen</a></li>
+                    <li><a href="7-8.html">Panik / Gespräch (Teil 1)</a></li>
+                    <li><a href="9-10.html">Gespräch (Teil 2) / Julius bei Dumbledore</a></li>
+                    <li><a href="11-12.html">Zweifel / Und jetzt?</a></li>
+                    <li><a href="13-14.html">Die Macht der Musik / Ein Werk der Liebe</a></li>
+                    <li><a href="15-16.html">Geständnis? / Endlich neue Informationen</a></li>
+                    <li><a href="17-18.html">Schaffe ich das? / Warten, warten, warten</a></li>  
                 </ol>
             </div>
         </div>
