first mobile design

--- a/fanfiction/mobbing-auch-in-hogwarts/1-2.html
+++ b/fanfiction/mobbing-auch-in-hogwarts/1-2.html
@@ -11,8 +11,8 @@
         <link rel="stylesheet" href="../../styles/bookshelf.css">
     </head>
 
-    <body class="body  fit-page fanfiction">
-        <div class="content-container">
+    <body class="body fanfiction">
+        <div class="content-container fit-page">
             <div class="bookheadline">
                 <a class="icon-back" href="../mobbing-auch-in-hogwarts/mobbing-auch-in-hogwarts-overview.html"><img class="icon-back" src="../../objects/arrow-left.svg"/></a>
                 <h3>Inhaltsverzeichnis</h3>
